Correction version tablette

--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ aside {
 ul {
 	list-style-type: none;	
 	text-align: center;
-	padding: 15px;
+	padding: 0;
 }
 li {
 	display: inline;
